--- a/res/layout/top_panel_capture.xml
+++ b/res/layout/top_panel_capture.xml
@@ -4,30 +4,87 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <View
-        android:layout_height="65dp"
+    <FrameLayout
+        android:id="@+id/top_panel_4"
         android:layout_width="match_parent"
-        android:layout_gravity="center_horizontal" />
+        android:layout_height="@dimen/height_actionbar" >
 
-    <Button
+        <com.google.zxing.blur_effect.ScrollableImageView
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/height_actionbar" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/semi_transparent_black"
+            android:gravity="center_vertical"
+            android:textSize="18sp"
+            android:paddingLeft="10dp"/>
+
+    </FrameLayout>
+
+    <FrameLayout
         android:id="@+id/top_panel_1"
-        android:layout_height="65dp"
         android:layout_width="match_parent"
-        android:paddingLeft="10dp"
-        android:gravity="left|center_vertical"
-        android:tag="contact"
-        android:text="Contact ticktBox"
-        android:layout_gravity="center_horizontal" />
+        android:layout_height="@dimen/height_actionbar" >
 
-    <Button
+        <com.google.zxing.blur_effect.ScrollableImageView
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/height_actionbar" />
+        <TextView
+            android:text="How-to Guide"
+            android:textColor="@android:color/white"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/semi_transparent_black"
+            android:gravity="center_vertical"
+            android:textSize="18sp"
+            android:paddingLeft="10dp"/>
+
+    </FrameLayout>
+
+    <FrameLayout
         android:id="@+id/top_panel_2"
-        android:layout_height="65dp"
         android:layout_width="match_parent"
-        android:paddingLeft="10dp"
-        android:gravity="left|center_vertical"
-        android:tag="log_out"
-        android:text="Log Out"
-        android:layout_gravity="center_horizontal" />
+        android:layout_height="@dimen/height_actionbar" >
+
+        <com.google.zxing.blur_effect.ScrollableImageView
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/height_actionbar" />
+        <TextView
+            android:text="Contact ticktBox"
+            android:textColor="@android:color/white"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/semi_transparent_black"
+            android:gravity="center_vertical"
+            android:textSize="18sp"
+            android:paddingLeft="10dp"/>
+
+    </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/top_panel_3"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/height_actionbar" >
+
+        <com.google.zxing.blur_effect.ScrollableImageView
+            android:id="@+id/blurred_image_header"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/height_actionbar" />
+        <TextView
+            android:text="Log Out"
+            android:textColor="@android:color/white"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/semi_transparent_black"
+            android:gravity="center_vertical"
+            android:textSize="18sp"
+            android:paddingLeft="10dp"/>
+
+    </FrameLayout>
+
+
+
 
 
 </LinearLayout>
