--- a/res/layout/zxing_capture.xml
+++ b/res/layout/zxing_capture.xml
@@ -28,61 +28,19 @@
         android:layout_height="fill_parent"
         android:visibility="gone"/>
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/zxing_capture_header"
-        android:orientation="vertical" android:layout_width="match_parent"
-        android:background="@android:color/transparent"
-        android:layout_height="65dp">
 
-        <ImageView
-            android:adjustViewBounds="true"
-            android:layout_margin="5dp"
-            android:padding="8dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-    </LinearLayout>
-
-
-    <!-- <view
-         class="com.google.zxing.widgets.MultiDirectionSlidingDrawer"
-         xmlns:my="http://schemas.android.com/apk/res-auto"
-         android:id="@+id/drawer"
-         my:direction="topToBottom"
-         android:layout_width="match_parent"
-         android:layout_height="260dp"
-         my:handle="@+id/handle"
-         my:content="@+id/content">
-         <include android:id="@id/content"
-             layout="@layout/top_panel_capture" />
-         <LinearLayout
-             android:id="@id/handle"
-             android:layout_width="match_parent"
-             android:layout_height="65dp"
-             android:background="@android:color/white"
-             android:paddingRight="8dp"
-             android:gravity="right"
-             >
-
-             <ImageView
-                 android:layout_width="wrap_content"
-                 android:layout_height="65dp"/>
-
-         </LinearLayout>
-
-     </view>
- -->
 
 
     <RelativeLayout
         android:id="@+id/zxing_capture_content"
         android:layout_above="@+id/zxing_capture_footer"
-        android:layout_below="@id/zxing_capture_header"
+        android:layout_below="@+id/zxing_capture_header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
 
         <LinearLayout
+            android:layout_marginTop="15dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -103,7 +61,9 @@
                 android:textSize="15sp"/>
         </LinearLayout>
 
-        <LinearLayout android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_marginTop="15dp"
+            android:layout_width="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
@@ -213,5 +173,59 @@
             android:layout_height="wrap_content"
             android:text="Error Message"/>
     </com.google.zxing.views.ScanResultLayout>
+
+
+
+    <view
+        class="com.google.zxing.widgets.MultiDirectionSlidingDrawer"
+        xmlns:my="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/drawer"
+        my:direction="topToBottom"
+        android:layout_width="match_parent"
+        android:layout_height="325dp"
+        my:handle="@+id/handle"
+        my:content="@+id/content">
+        <include android:id="@id/content"
+            layout="@layout/top_panel_capture" />
+
+        <FrameLayout
+            android:id="@id/handle"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/height_actionbar" >
+
+            <com.google.zxing.blur_effect.ScrollableImageView
+                android:id="@+id/blurred_image_header"
+                android:background="@color/semi_transparent_black"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/height_actionbar"/>
+
+            <ImageView
+                android:layout_gravity="right"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/height_actionbar"
+                android:src="@drawable/ic_handle_white"/>
+
+        </FrameLayout>
+
+    </view>
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/zxing_capture_header"
+        android:orientation="vertical" android:layout_width="match_parent"
+        android:background="@android:color/transparent"
+        android:layout_height="65dp">
+
+        <ImageView
+            android:adjustViewBounds="true"
+            android:src="@drawable/ic_ticktbox_logo_white"
+            android:layout_margin="5dp"
+            android:padding="8dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+
+
+
 
 </RelativeLayout>
