--- a/res/layout/zxing_capture.xml
+++ b/res/layout/zxing_capture.xml
@@ -14,7 +14,9 @@
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:font="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 
@@ -168,9 +170,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ico_full"/>
-        <TextView
+        <com.google.zxing.views.ZXFontView
+            android:id="@+id/scan_result_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@android:color/white"
+            android:gravity="center"
+            android:textSize="36sp"
+            font:fontName="@string/zx_font_museo_slab"
             android:text="Error Message"/>
     </com.google.zxing.views.ScanResultLayout>
 
