--- a/res/layout/zxing_capture.xml
+++ b/res/layout/zxing_capture.xml
@@ -213,6 +213,12 @@
                 android:layout_height="@dimen/height_actionbar"
                 android:src="@drawable/ic_handle_white"/>
 
+            <View
+                android:layout_gravity="bottom"
+                android:background="@android:color/white"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"/>
+
         </FrameLayout>
 
     </view>
